--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,8 +24,13 @@
 
 	<div id="main" class="site-main">
 	{{ block "main" . -}}{{- end }}
+
 	</div>
+		{{ partial "prefooter.html" .}}
 </div>
+
+{{ partial "footer.html" .}}
+
 </body>
 </html>
  
