Add post layout. Add post meta. Fix sidebar.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,7 +23,11 @@
 	</header><!-- #header -->
 
 	<div id="main" class="site-main">
+		<div id="primary" class="content-area">  
+<div id="content" class="site-content" role="main">
 	{{ block "main" . -}}{{- end }}
+</div>
+</div>
     {{ partial "sidebar.html" . }}
 	</div>
 		{{ partial "prefooter.html" . }}
