--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -52,7 +52,7 @@
             color: var(--accent_color);
         }
         #nav-wrapper .ribbon-left,#nav-wrapper .ribbon-right{
-            background-image: url(images/ribbon-{{ .Site.Params.accent_color }}.png);
+            background-image: url(/images/ribbon-{{ .Site.Params.accent_color }}.png);
         }
         a:hover,a:focus,nav#main-nav>ul>li>a:hover {
             opacity: 0.7;
@@ -81,7 +81,7 @@
     <style>
         body.custom-background {
             background-color: #d1d1d1;
-            background-image: url(images/bg.png);
+            background-image: url(/images/bg.png);
             background-position: left top;
             background-size: auto;
             background-repeat: repeat;
