--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -33,7 +33,7 @@
 <aside id="sugarspice_about_widget-2" class="widget sugarspice_about_widget">
 	<h3 class="widget-title"><span>About <em>Me</em></span></h3>
 	{{ with .Site.Params.aboutMeImage -}}
-	<img src="{{ . }}" class="profile" pagespeed_url_hash="2650846364" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"> 
+	<img src="{{ . }}" class="profile"> 
 	{{- end }}       
 
 	{{ with .Site.Params.summary -}}
