--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -34,15 +34,8 @@
 
 
 <div id="comments" class="comments-area section">
-
-	
-	<h2 class="comments-title section-title">
-		<span>
-		One comment		</span>
+    <h2 class="comments-title section-title">
+		<span>Comments</span>
 	</h2>
-
-
-	<ol class="comment-list">
-	</ol><!-- .comment-list -->
 </div><!-- #comments -->
 {{- end }}
