--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -49,7 +49,7 @@
             color: var(--main-color);
         }
         .entry-meta a {
-            color: var(--accent_color);
+            color: var(--accent-color);
         }
         #nav-wrapper .ribbon-left,#nav-wrapper .ribbon-right{
             background-image: url(/images/ribbon-{{ .Site.Params.accent_color }}.png);
@@ -62,16 +62,16 @@
             color: var(--main-color);
         }
         .widget-title em {
-            color: var(--accent_color);
+            color: var(--accent-color);
         }
         .widget_calendar table td#today {
-            background: var(--accent_color);
+            background: var(--accent-color);
         }
         blockquote cite {
             color: var(--main-color);
         }
         blockquote {
-            border-left-color: var(--accent_color);
+            border-left-color: var(--accent-color);
         }
         .button:hover,button:hover,a.social-icon:hover,input[type="submit"]:hover,input[type="reset"]:hover,input[type="button"]:hover {
             opacity: 0.7;
