--- a/layouts/home.html
+++ b/layouts/home.html
@@ -29,10 +29,7 @@
         <header class="entry-header">
             <h1 class="entry-title"><a href="{{ .Permalink }}" rel="bookmark">{{ .Title }}</a></h1>
 
-            <div class="entry-meta">
-                <span class="byline"> By <span class="author vcard"><a href="%2$s" title="%3$s" rel="author" class="fn">Traci Dietrich</a></span></span> //
-                <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Date.Format "January 2, 2006" }}</time>
-            </div><!-- .entry-meta -->
+            {{ partial "post-meta.html" . }}
         </header><!-- .entry-header -->
 
       <div class="entry-summary">
