--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -1,4 +1,6 @@
 <div class="entry-meta">
-    <span class="byline"> By <span class="author vcard"><a href="%2$s" title="%3$s" rel="author" class="fn">Traci Dietrich</a></span></span> //
+	{{ with .Params.author -}}
+    <span class="byline"> By <span class="author vcard"><a href="%2$s" title="%3$s" rel="author" class="fn">{{ . }}</a></span></span> //
+    {{- end }}
     <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Date.Format "January 2, 2006" }}</time>
 </div><!-- .entry-meta -->
