--- a/layouts/partials/prefooter.html
+++ b/layouts/partials/prefooter.html
@@ -1,5 +1,5 @@
 <div id="prefooter">
-	<div id="prefooter-inner">
+	<div id="prefooter-inner" class="row">
 		<div class="one-half">
 			Recent comments
 		</div>
