--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,6 +14,11 @@
     <title>{{ .Title }}</title>
     {{- end }}
 
+    <!-- Hugo internal templates -->
+    {{ template "_internal/google_analytics_async.html" . }}
+    {{ template "_internal/opengraph.html" . }}
+    {{ template "_internal/twitter_cards.html" . }}
+
     <!-- CSS -->
     <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
     <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/responsive.css">
