--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,6 +17,7 @@
     <!-- Hugo internal templates -->
     {{ template "_internal/google_analytics_async.html" . }}
     {{ template "_internal/opengraph.html" . }}
+    {{ template "_internal/schema.html" . }}
     {{ template "_internal/twitter_cards.html" . }}
 
     <!-- CSS -->
