Fix bottom border of list items.

--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,4 +1,4 @@
-<article>
+<article class="excerpt">
     <div class="post-thumbnail">
     {{ range .Params.images }}
        <a href="{{ .Permalink }}">
