--- a/layouts/partials/recipe.metadata.html
+++ b/layouts/partials/recipe.metadata.html
@@ -13,16 +13,18 @@
       "prepTime": "{{ .Params.recipe.prepTime }}",
       "totalTime": "{{ .Params.recipe.totalTime }}",
       "recipeYield": "{{ .Params.recipe.recipeYield }}",
-      "recipeIngredient": {{ .Params.recipe.ingredients }},
-      "recipeInstructions": {{ .Params.recipe.instructions }},
+      "recipeIngredient": {{ .Params.recipe.recipeIngredients }},
+      "recipeInstructions": {{ .Params.recipe.recipeInstructions }},
+      {{ with .Params.recipe.rating }}
       "aggregateRating" : {
           "@context": "http://schema.org",
           "@type": "AggregateRating",
-          "ratingValue": "{{ .Params.rating.value }}",
-          "reviewCount": "{{ .Params.rating.reviewCount }}",
-          "bestRating": "{{ .Params.rating.best }}",
-          "worstRating": "{{ .Params.rating.worst }}"
+          "ratingValue": "{{ .ratingValue }}",
+          "reviewCount": "{{ .reviewCount }}",
+          "bestRating": "{{ .bestRating }}",
+          "worstRating": "{{ .worstRating }}"
       },
+      {{ end }}
       "image" : {
           "@context": "http://schema.org",
           "@type": "ImageObject",
@@ -31,19 +33,21 @@
           "datePublished": "{{ .PublishDate.Format "2006-01-02T15:04:05" }}",
           "name": "{{ .Title }}",
         },
+      {{ with .Params.recipe.nutrition }}
       "nutrition": {
         "@type": "NutritionInformation",
-        "servingSize": "{{ .Params.nutrition.servingSize }}",
-        "calories": "{{ .Params.nutrition.calories }}",
-        "fatContent": "{{ .Params.nutrition.fatContent }}",
-        "carbohydrateContent": "{{ .Params.nutrition.carbohydrateContent }}",
-        "cholesterolContent": "{{ .Params.nutrition.cholesterolContent }}",
-        "fiberContent": "{{ .Params.nutrition.fiberContent }}",
-        "proteinContent": "{{ .Params.nutrition.proteinContent }}",
-        "saturatedFatContent": "{{ .Params.nutrition.saturatedFatContent }}",
-        "sodiumContent": "{{ .Params.nutrition.sodiumContent }}",
-        "sugarContent": "{{ .Params.nutrition.sugarContent }}",
-        "transFatContent": "{{ .Params.nutrition.transFatContent }}"
+        "servingSize": "{{ .servingSize }}",
+        "calories": "{{ .calories }}",
+        "fatContent": "{{ .fatContent }}",
+        "carbohydrateContent": "{{ .carbohydrateContent }}",
+        "cholesterolContent": "{{ .cholesterolContent }}",
+        "fiberContent": "{{ .fiberContent }}",
+        "proteinContent": "{{ .proteinContent }}",
+        "saturatedFatContent": "{{ .saturatedFatContent }}",
+        "sodiumContent": "{{ .sodiumContent }}",
+        "sugarContent": "{{ .sugarContent }}",
+        "transFatContent": "{{ .transFatContent }}"
       }
+      {{ end }}
     }
 </script>
