Fix typo in json-ld template.

--- a/layouts/partials/recipe.metadata.html
+++ b/layouts/partials/recipe.metadata.html
@@ -13,7 +13,7 @@
       "prepTime": "{{ .Params.recipe.prepTime }}",
       "totalTime": "{{ .Params.recipe.totalTime }}",
       "recipeYield": "{{ .Params.recipe.recipeYield }}",
-      "recipeIngredient": {{ .Params.recipe.recipeIngredients }},
+      "recipeIngredient": {{ .Params.recipe.recipeIngredient }},
       "recipeInstructions": {{ .Params.recipe.recipeInstructions }},
       {{ with .Params.recipe.rating }}
       "aggregateRating" : {
