--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,9 +23,9 @@
     {{ partial "recipe.metadata.html" . }}
 
     <!-- CSS -->
-    <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
-    <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}css/responsive.css">
-    <link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL }}fonts/icofont.css">
+    <link type="text/css" rel="stylesheet" href="/css/style.css">
+    <link type="text/css" rel="stylesheet" href="/css/responsive.css">
+    <link type="text/css" rel="stylesheet" href="/fonts/icofont.css">
     <link rel="stylesheet" id="sugarspice-fonts-css" href="//fonts.googleapis.com/css?family=Niconne%7CPT%2BSerif%3A400%2C700%7CRaleway%3A400%2C600&amp;subset=latin%2Clatin-ext&amp;ver=5.2.5" type="text/css" media="all">
 
     <!-- Favicon -->
@@ -35,8 +35,9 @@
     {{ .Hugo.Generator }}
 
     <!-- RSS -->
-    <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-
+    {{ with .OutputFormats.Get "RSS" }}
+      <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+    {{ end }}
     <style>
         :root {
             --green:    #97C379;
