Fix alternative output formats.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,10 +34,10 @@
     <!-- Hugo version -->
     {{ .Hugo.Generator }}
 
-    <!-- RSS -->
-    {{ with .OutputFormats.Get "RSS" }}
-      <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-    {{ end }}
+    {{ range .AlternativeOutputFormats -}}
+      {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+    {{ end -}}
+
     <style>
         :root {
             --green:    #97C379;
