--- a/static/css/style.css
+++ b/static/css/style.css
@@ -82,7 +82,7 @@ body {
     font-size: 87.5%;
     line-height: 1.5;
     font-family: PT Serif, Georgia, serif;
-    color: #797979;
+    /* color: #797979; */
     -webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
     -webkit-text-size-adjust: 100%;
     -ms-word-wrap: break-word;
@@ -884,7 +884,7 @@ input[type="reset"],
 input[type="button"] {
     padding: 6px 10px;
     display: inline-block;
-    color: #888;
+    /* color: #888; */
     background-color: #f4f4f4;
     -webkit-transition: all 200ms ease-in-out;
     -moz-transition: all 200ms ease-in-out;
@@ -923,7 +923,7 @@ select {
     -webkit-border-radius: 2px;
     border-radius: 2px;
     font: 13px "Open Sans", Arial, sans-serif;
-    color: #acacac;
+    /* color: #acacac; */
     margin: 0;
     max-width: 100%;
     display: block;
@@ -945,8 +945,7 @@ input[type="password"]:focus,
 input[type="email"]:focus,
 textarea:focus {
     border: 1px solid #aaa;
-    color: #acacac;
-    color: #acacac;
+    /* color: #acacac; */
     -moz-box-shadow: 0 0 3px rgba(0,0,0,.2);
     -webkit-box-shadow: 0 0 3px rgba(0,0,0,.2);
     box-shadow:  0 0 3px rgba(0,0,0,.2);
