Make peach and emerald colors accessible.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -41,9 +41,9 @@
     <style>
         :root {
             --green:    #97C379;
-            --emerald:  #36AB8A;
+            --emerald:  #2A846B;
             --mint:     #9ED6BB;
-            --peach:    #F9AA89;
+            --peach:    #9C3407;
             --pink:     #F8AFB8;
             --red:      #F03B42;
             --violet:   #BB86B4;
