--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -37,7 +37,7 @@
 <aside id="sugarspice_about_widget-2" class="widget sugarspice_about_widget">
 	<h3 class="widget-title"><span>About <em>Me</em></span></h3>
 	{{ with .Site.Params.aboutMeImage -}}
-	<img src="{{ . }}" class="profile"> 
+		<img src="{{ . }}" alt="Profile image" class="profile" width="400" height="600"> 
 	{{- end }}       
 
 	{{ with .Site.Params.summary -}}
