--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -26,8 +26,10 @@
     <link type="text/css" rel="stylesheet" href="/css/style.css">
     <link type="text/css" rel="stylesheet" href="/css/responsive.css">
     <link type="text/css" rel="stylesheet" href="/fonts/icofont.css">
-    <link rel="stylesheet" id="sugarspice-fonts-css" href="//fonts.googleapis.com/css?family=Niconne%7CPT%2BSerif%3A400%2C700%7CRaleway%3A400%2C600&amp;subset=latin%2Clatin-ext&amp;ver=5.2.5" type="text/css" media="all">
-
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Niconne&family=Raleway&display=swap" rel="stylesheet">
+    
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.png">
 
