Use PT Serif for content.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -28,7 +28,7 @@
     <link type="text/css" rel="stylesheet" href="/fonts/icofont.css">
     
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Niconne&family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Niconne&family=Raleway&family=PT+Serif&display=swap" rel="stylesheet">
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="/favicon.png">
