--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -1,6 +1,7 @@
 <div class="entry-meta">
-	{{ with .Params.author -}}
-    <span class="byline"> By <span class="author vcard"><a href="%2$s" title="%3$s" rel="author" class="fn">{{ . }}</a></span></span> //
-    {{- end }}
+    <!-- TODO: Add link to author pages. -->
+    {{ with .Params.authors }}
+    <span class="byline"> By <span class="author vcard">{{ delimit . " and " }}</span></span> //
+    {{ end }}
     <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Date.Format "January 2, 2006" }}</time>
 </div><!-- .entry-meta -->
