--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -1,7 +1,7 @@
 <div class="entry-meta">
     <!-- TODO: Add link to author pages. -->
-    {{ with .Params.authors }}
-    <span class="byline"> By <span class="author vcard">{{ delimit . " and " }}</span></span> //
+    {{ with .Params.author }}
+    <span class="byline"> By <span class="author vcard">{{ . }}</span></span> //
     {{ end }}
     <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Date.Format "January 2, 2006" }}</time>
 </div><!-- .entry-meta -->
