--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,13 +21,17 @@
 	</div><!-- .entry-content -->
 
 	<footer class="entry-meta bottom">
+		{{ if (or (isset .Params "categories") (isset .Params "tags")) -}}
 		This entry was
-		{{ with .Params.categories -}}
-		posted in {{ . }}
 		{{- end }}
-
+		{{ if .Params.categories -}}
+		posted in {{ delimit .Params.categories " and " }}
+		  {{ if .Params.tags -}}
+		  and 
+		  {{- end }}
+		{{- end }}
 		{{ with .Params.tags -}}
-		and tagged {{ . }}
+		tagged {{ delimit . " and " }}
 		{{- end }}
 	</footer><!-- .entry-meta -->
 </article><!-- #post-## -->
