Use updated hugo generator function.

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,7 +34,7 @@
     <link rel="shortcut icon" href="/favicon.png">
 
     <!-- Hugo version -->
-    {{ .Hugo.Generator }}
+    {{ hugo.Generator }}
 
     {{ range .AlternativeOutputFormats -}}
       {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
