Remove recent in prefooter.

--- a/layouts/partials/prefooter.html
+++ b/layouts/partials/prefooter.html
@@ -1,10 +1,11 @@
 <div id="prefooter">
 	<div id="prefooter-inner" class="row">
+		<!-- TODO: Recent posts here
 		<div class="one-half">
 			Recent comments
 		</div>
 		<div class="one-half">
 			Instagram feed
-		</div>
+		</div>-->
 	</div>
 </div>
