--- a/layouts/partials/post-meta.html
+++ b/layouts/partials/post-meta.html
@@ -1,7 +1,9 @@
 <div class="entry-meta">
     <!-- TODO: Add link to author pages. -->
     {{ with .Params.author }}
-    <span class="byline"> By <span class="author vcard">{{ . }}</span></span> //
+    <span class="byline"> By <span class="author vcard">{{ . }}</span></span>
     {{ end }}
-    <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Date.Format "January 2, 2006" }}</time>
+    {{ if .Date }}
+    // <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Date.Format "January 2, 2006" }}</time>
+    {{ end }}
 </div><!-- .entry-meta -->
